# Research-Paper-1

./: README.md  pyproject.toml  requirements.txt
HateSpeech/: benign_classifier.py
HateSpeech/dataset/: data_augmenter.py
SST2/: benign_classifier.py
SST2/dataset/benign/: dataset.py  train_text.txt  validation_text.txt
