[tool.poetry]
name = "research-paper-1"
version = "0.1.0"
description = "Use of kmeans clustering to detect backdoors on nlp models"
authors = ["Nathan-Salawe <salawenath@gmail.com>"]
readme = "README.md"
packages = [{include = "research_paper_1"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
